// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`dashboard deep link, new-client-shaped, no reportingMonths: returned tree is unchanged 1`] = `
{
  "digests": {
    "CLIENT_VIEWER "custom:2026-08-01,2026-08-15" -": "337a1b529dbd4b19",
    "CLIENT_VIEWER "custom:2026-08-01,2026-08-15" previous_year": "4f8d9e5ba35815ff",
    "CLIENT_VIEWER "custom:2026-08-01,2026-08-31" -": "bcfee9815d81c302",
    "CLIENT_VIEWER "custom:2026-08-01,2026-08-31" previous_year": "1f1139e56a681b2f",
    "CLIENT_VIEWER "junk" -": "88167626273e59e9",
    "CLIENT_VIEWER "junk" previous_year": "a05e10a68b1a7bcb",
    "CLIENT_VIEWER "last_30_days" -": "92211518f762d9ea",
    "CLIENT_VIEWER "last_30_days" previous_year": "b87de696f55c5abe",
    "CLIENT_VIEWER "last_month" -": "e608bcac1a80ae06",
    "CLIENT_VIEWER "last_month" previous_year": "f30cafcd72fbf528",
    "CLIENT_VIEWER ["last_30_days","x"] -": "9b1c9f1b9fd1aa26",
    "CLIENT_VIEWER ["last_30_days","x"] previous_year": "e698074d32fa8c12",
    "CLIENT_VIEWER undefined -": "92211518f762d9ea",
    "CLIENT_VIEWER undefined previous_year": "b87de696f55c5abe",
    "INTERNAL_ADMIN "custom:2026-08-01,2026-08-15" -": "337a1b529dbd4b19",
    "INTERNAL_ADMIN "custom:2026-08-01,2026-08-15" previous_year": "4f8d9e5ba35815ff",
    "INTERNAL_ADMIN "custom:2026-08-01,2026-08-31" -": "bcfee9815d81c302",
    "INTERNAL_ADMIN "custom:2026-08-01,2026-08-31" previous_year": "1f1139e56a681b2f",
    "INTERNAL_ADMIN "junk" -": "88167626273e59e9",
    "INTERNAL_ADMIN "junk" previous_year": "a05e10a68b1a7bcb",
    "INTERNAL_ADMIN "last_30_days" -": "92211518f762d9ea",
    "INTERNAL_ADMIN "last_30_days" previous_year": "b87de696f55c5abe",
    "INTERNAL_ADMIN "last_month" -": "e608bcac1a80ae06",
    "INTERNAL_ADMIN "last_month" previous_year": "f30cafcd72fbf528",
    "INTERNAL_ADMIN ["last_30_days","x"] -": "9b1c9f1b9fd1aa26",
    "INTERNAL_ADMIN ["last_30_days","x"] previous_year": "e698074d32fa8c12",
    "INTERNAL_ADMIN undefined -": "92211518f762d9ea",
    "INTERNAL_ADMIN undefined previous_year": "b87de696f55c5abe",
  },
  "representative": {
    "tree": {
      "key": null,
      "props": {
        "children": [
          {
            "key": null,
            "props": {
              "children": {
                "key": null,
                "props": {
                  "children": {
                    "key": null,
                    "props": {
                      "compareValue": null,
                      "value": "last_30_days",
                    },
                    "type": "ReportDateRange",
                  },
                  "fallback": null,
                },
                "type": "react.suspense",
              },
              "subtitle": "Client",
              "title": "Organic Social",
            },
            "type": "Header",
          },
          {
            "key": null,
            "props": {
              "className": "divider-full mb-8",
            },
            "type": "div",
          },
          {
            "key": null,
            "props": {
              "children": {
                "key": null,
                "props": {
                  "children": {
                    "key": null,
                    "props": {
                      "channel": null,
                      "clientSlug": "c",
                      "compareRange": null,
                      "dateRange": "last_30_days",
                    },
                    "type": "OrganicSocialReport",
                  },
                  "fallback": {
                    "key": null,
                    "props": {},
                    "type": "ReportSkeleton",
                  },
                },
                "type": "react.suspense",
              },
              "sectionName": "Organic Social",
            },
            "type": "ReportErrorBoundary",
          },
        ],
      },
      "type": "react.fragment",
    },
  },
}
`;

exports[`dashboard deep link, renaissance-shaped: returned tree is unchanged 1`] = `
{
  "digests": {
    "CLIENT_VIEWER "custom:2026-08-01,2026-08-15" -": "337a1b529dbd4b19",
    "CLIENT_VIEWER "custom:2026-08-01,2026-08-15" previous_year": "4f8d9e5ba35815ff",
    "CLIENT_VIEWER "custom:2026-08-01,2026-08-31" -": "bcfee9815d81c302",
    "CLIENT_VIEWER "custom:2026-08-01,2026-08-31" previous_year": "1f1139e56a681b2f",
    "CLIENT_VIEWER "junk" -": "88167626273e59e9",
    "CLIENT_VIEWER "junk" previous_year": "a05e10a68b1a7bcb",
    "CLIENT_VIEWER "last_30_days" -": "92211518f762d9ea",
    "CLIENT_VIEWER "last_30_days" previous_year": "b87de696f55c5abe",
    "CLIENT_VIEWER "last_month" -": "e608bcac1a80ae06",
    "CLIENT_VIEWER "last_month" previous_year": "f30cafcd72fbf528",
    "CLIENT_VIEWER ["last_30_days","x"] -": "9b1c9f1b9fd1aa26",
    "CLIENT_VIEWER ["last_30_days","x"] previous_year": "e698074d32fa8c12",
    "CLIENT_VIEWER undefined -": "92211518f762d9ea",
    "CLIENT_VIEWER undefined previous_year": "b87de696f55c5abe",
    "INTERNAL_ADMIN "custom:2026-08-01,2026-08-15" -": "337a1b529dbd4b19",
    "INTERNAL_ADMIN "custom:2026-08-01,2026-08-15" previous_year": "4f8d9e5ba35815ff",
    "INTERNAL_ADMIN "custom:2026-08-01,2026-08-31" -": "bcfee9815d81c302",
    "INTERNAL_ADMIN "custom:2026-08-01,2026-08-31" previous_year": "1f1139e56a681b2f",
    "INTERNAL_ADMIN "junk" -": "88167626273e59e9",
    "INTERNAL_ADMIN "junk" previous_year": "a05e10a68b1a7bcb",
    "INTERNAL_ADMIN "last_30_days" -": "92211518f762d9ea",
    "INTERNAL_ADMIN "last_30_days" previous_year": "b87de696f55c5abe",
    "INTERNAL_ADMIN "last_month" -": "e608bcac1a80ae06",
    "INTERNAL_ADMIN "last_month" previous_year": "f30cafcd72fbf528",
    "INTERNAL_ADMIN ["last_30_days","x"] -": "9b1c9f1b9fd1aa26",
    "INTERNAL_ADMIN ["last_30_days","x"] previous_year": "e698074d32fa8c12",
    "INTERNAL_ADMIN undefined -": "92211518f762d9ea",
    "INTERNAL_ADMIN undefined previous_year": "b87de696f55c5abe",
  },
  "representative": {
    "tree": {
      "key": null,
      "props": {
        "children": [
          {
            "key": null,
            "props": {
              "children": {
                "key": null,
                "props": {
                  "children": {
                    "key": null,
                    "props": {
                      "compareValue": null,
                      "value": "last_30_days",
                    },
                    "type": "ReportDateRange",
                  },
                  "fallback": null,
                },
                "type": "react.suspense",
              },
              "subtitle": "Client",
              "title": "Organic Social",
            },
            "type": "Header",
          },
          {
            "key": null,
            "props": {
              "className": "divider-full mb-8",
            },
            "type": "div",
          },
          {
            "key": null,
            "props": {
              "children": {
                "key": null,
                "props": {
                  "children": {
                    "key": null,
                    "props": {
                      "channel": null,
                      "clientSlug": "c",
                      "compareRange": null,
                      "dateRange": "last_30_days",
                    },
                    "type": "OrganicSocialReport",
                  },
                  "fallback": {
                    "key": null,
                    "props": {},
                    "type": "ReportSkeleton",
                  },
                },
                "type": "react.suspense",
              },
              "sectionName": "Organic Social",
            },
            "type": "ReportErrorBoundary",
          },
        ],
      },
      "type": "react.fragment",
    },
  },
}
`;

exports[`dashboard spa, new-client-shaped, no reportingMonths: returned tree is unchanged 1`] = `
{
  "digests": {
    "CLIENT_VIEWER "custom:2026-08-01,2026-08-15" -": "9043fd5d8016dc89",
    "CLIENT_VIEWER "custom:2026-08-01,2026-08-15" previous_year": "64473ce94b040923",
    "CLIENT_VIEWER "custom:2026-08-01,2026-08-31" -": "fdcdf063aca16947",
    "CLIENT_VIEWER "custom:2026-08-01,2026-08-31" previous_year": "1663e5e99d5e1cb7",
    "CLIENT_VIEWER "junk" -": "f40e3386de65744b",
    "CLIENT_VIEWER "junk" previous_year": "7c490938dbcf9863",
    "CLIENT_VIEWER "last_30_days" -": "0fc94acd01f72d50",
    "CLIENT_VIEWER "last_30_days" previous_year": "c18ad07ece05d5b2",
    "CLIENT_VIEWER "last_month" -": "f86bd403e7357438",
    "CLIENT_VIEWER "last_month" previous_year": "0071fb1ad180586c",
    "CLIENT_VIEWER ["last_30_days","x"] -": "39f3272636b65a5b",
    "CLIENT_VIEWER ["last_30_days","x"] previous_year": "1e0eca558c9655dc",
    "CLIENT_VIEWER health": "0fc94acd01f72d50",
    "CLIENT_VIEWER undefined -": "0fc94acd01f72d50",
    "CLIENT_VIEWER undefined previous_year": "c18ad07ece05d5b2",
    "INTERNAL_ADMIN "custom:2026-08-01,2026-08-15" -": "9043fd5d8016dc89",
    "INTERNAL_ADMIN "custom:2026-08-01,2026-08-15" previous_year": "64473ce94b040923",
    "INTERNAL_ADMIN "custom:2026-08-01,2026-08-31" -": "fdcdf063aca16947",
    "INTERNAL_ADMIN "custom:2026-08-01,2026-08-31" previous_year": "1663e5e99d5e1cb7",
    "INTERNAL_ADMIN "junk" -": "f40e3386de65744b",
    "INTERNAL_ADMIN "junk" previous_year": "7c490938dbcf9863",
    "INTERNAL_ADMIN "last_30_days" -": "0fc94acd01f72d50",
    "INTERNAL_ADMIN "last_30_days" previous_year": "c18ad07ece05d5b2",
    "INTERNAL_ADMIN "last_month" -": "f86bd403e7357438",
    "INTERNAL_ADMIN "last_month" previous_year": "0071fb1ad180586c",
    "INTERNAL_ADMIN ["last_30_days","x"] -": "39f3272636b65a5b",
    "INTERNAL_ADMIN ["last_30_days","x"] previous_year": "1e0eca558c9655dc",
    "INTERNAL_ADMIN health": "c62db1c4f426f57b",
    "INTERNAL_ADMIN undefined -": "0fc94acd01f72d50",
    "INTERNAL_ADMIN undefined previous_year": "c18ad07ece05d5b2",
  },
  "representative": {
    "tree": {
      "key": null,
      "props": {
        "children": [
          {
            "key": null,
            "props": {
              "children": [
                null,
                null,
                null,
                {
                  "key": null,
                  "props": {
                    "children": {
                      "key": null,
                      "props": {
                        "compareRange": null,
                        "dateRange": "last_30_days",
                      },
                      "type": "GA4DatePicker",
                    },
                    "fallback": null,
                  },
                  "type": "react.suspense",
                },
                null,
                {
                  "key": null,
                  "props": {
                    "clientName": "Client",
                    "pageTitle": "Organic Social",
                    "periodLabel": "Sep 5 – Oct 4, 2026",
                  },
                  "type": "ExportPdfButton",
                },
              ],
              "logoUrl": null,
              "subtitle": "Client",
              "title": "Organic Social",
            },
            "type": "StickyReportHeader",
          },
          {
            "key": null,
            "props": {
              "className": "h-8",
            },
            "type": "div",
          },
          {
            "key": null,
            "props": {
              "children": {
                "key": "organic-social::last_30_days::",
                "props": {
                  "children": {
                    "key": null,
                    "props": {
                      "channel": null,
                      "clientSlug": "c",
                      "compareRange": null,
                      "dateRange": "last_30_days",
                    },
                    "type": "OrganicSocialReport",
                  },
                  "fallback": {
                    "key": null,
                    "props": {},
                    "type": "SectionSkeleton",
                  },
                },
                "type": "react.suspense",
              },
              "sectionName": "Organic Social",
            },
            "type": "ReportErrorBoundary",
          },
        ],
        "delayDuration": 150,
        "skipDelayDuration": 50,
      },
      "type": "TooltipProvider",
    },
  },
}
`;

exports[`dashboard spa, renaissance-shaped: returned tree is unchanged 1`] = `
{
  "digests": {
    "CLIENT_VIEWER "custom:2026-08-01,2026-08-15" -": "9043fd5d8016dc89",
    "CLIENT_VIEWER "custom:2026-08-01,2026-08-15" previous_year": "64473ce94b040923",
    "CLIENT_VIEWER "custom:2026-08-01,2026-08-31" -": "fdcdf063aca16947",
    "CLIENT_VIEWER "custom:2026-08-01,2026-08-31" previous_year": "1663e5e99d5e1cb7",
    "CLIENT_VIEWER "junk" -": "f40e3386de65744b",
    "CLIENT_VIEWER "junk" previous_year": "7c490938dbcf9863",
    "CLIENT_VIEWER "last_30_days" -": "0fc94acd01f72d50",
    "CLIENT_VIEWER "last_30_days" previous_year": "c18ad07ece05d5b2",
    "CLIENT_VIEWER "last_month" -": "f86bd403e7357438",
    "CLIENT_VIEWER "last_month" previous_year": "0071fb1ad180586c",
    "CLIENT_VIEWER ["last_30_days","x"] -": "39f3272636b65a5b",
    "CLIENT_VIEWER ["last_30_days","x"] previous_year": "1e0eca558c9655dc",
    "CLIENT_VIEWER health": "0fc94acd01f72d50",
    "CLIENT_VIEWER undefined -": "0fc94acd01f72d50",
    "CLIENT_VIEWER undefined previous_year": "c18ad07ece05d5b2",
    "INTERNAL_ADMIN "custom:2026-08-01,2026-08-15" -": "9043fd5d8016dc89",
    "INTERNAL_ADMIN "custom:2026-08-01,2026-08-15" previous_year": "64473ce94b040923",
    "INTERNAL_ADMIN "custom:2026-08-01,2026-08-31" -": "fdcdf063aca16947",
    "INTERNAL_ADMIN "custom:2026-08-01,2026-08-31" previous_year": "1663e5e99d5e1cb7",
    "INTERNAL_ADMIN "junk" -": "f40e3386de65744b",
    "INTERNAL_ADMIN "junk" previous_year": "7c490938dbcf9863",
    "INTERNAL_ADMIN "last_30_days" -": "0fc94acd01f72d50",
    "INTERNAL_ADMIN "last_30_days" previous_year": "c18ad07ece05d5b2",
    "INTERNAL_ADMIN "last_month" -": "f86bd403e7357438",
    "INTERNAL_ADMIN "last_month" previous_year": "0071fb1ad180586c",
    "INTERNAL_ADMIN ["last_30_days","x"] -": "39f3272636b65a5b",
    "INTERNAL_ADMIN ["last_30_days","x"] previous_year": "1e0eca558c9655dc",
    "INTERNAL_ADMIN health": "c62db1c4f426f57b",
    "INTERNAL_ADMIN undefined -": "0fc94acd01f72d50",
    "INTERNAL_ADMIN undefined previous_year": "c18ad07ece05d5b2",
  },
  "representative": {
    "tree": {
      "key": null,
      "props": {
        "children": [
          {
            "key": null,
            "props": {
              "children": [
                null,
                null,
                null,
                {
                  "key": null,
                  "props": {
                    "children": {
                      "key": null,
                      "props": {
                        "compareRange": null,
                        "dateRange": "last_30_days",
                      },
                      "type": "GA4DatePicker",
                    },
                    "fallback": null,
                  },
                  "type": "react.suspense",
                },
                null,
                {
                  "key": null,
                  "props": {
                    "clientName": "Client",
                    "pageTitle": "Organic Social",
                    "periodLabel": "Sep 5 – Oct 4, 2026",
                  },
                  "type": "ExportPdfButton",
                },
              ],
              "logoUrl": null,
              "subtitle": "Client",
              "title": "Organic Social",
            },
            "type": "StickyReportHeader",
          },
          {
            "key": null,
            "props": {
              "className": "h-8",
            },
            "type": "div",
          },
          {
            "key": null,
            "props": {
              "children": {
                "key": "organic-social::last_30_days::",
                "props": {
                  "children": {
                    "key": null,
                    "props": {
                      "channel": null,
                      "clientSlug": "c",
                      "compareRange": null,
                      "dateRange": "last_30_days",
                    },
                    "type": "OrganicSocialReport",
                  },
                  "fallback": {
                    "key": null,
                    "props": {},
                    "type": "SectionSkeleton",
                  },
                },
                "type": "react.suspense",
              },
              "sectionName": "Organic Social",
            },
            "type": "ReportErrorBoundary",
          },
        ],
        "delayDuration": 150,
        "skipDelayDuration": 50,
      },
      "type": "TooltipProvider",
    },
  },
}
`;

exports[`portal deep link, new-client-shaped, no reportingMonths: returned tree is unchanged 1`] = `
{
  "digests": {
    "CLIENT_VIEWER "custom:2026-08-01,2026-08-15" -": "53694c7497aefa02",
    "CLIENT_VIEWER "custom:2026-08-01,2026-08-15" previous_year": "5b63e2778d937628",
    "CLIENT_VIEWER "custom:2026-08-01,2026-08-31" -": "3b8c49c5eb21243e",
    "CLIENT_VIEWER "custom:2026-08-01,2026-08-31" previous_year": "128b5602b285f9ab",
    "CLIENT_VIEWER "junk" -": "2cab47f142c8bd44",
    "CLIENT_VIEWER "junk" previous_year": "228cd2ad0a065653",
    "CLIENT_VIEWER "last_30_days" -": "a0e4f2523621d118",
    "CLIENT_VIEWER "last_30_days" previous_year": "60da3f39f56ac58d",
    "CLIENT_VIEWER "last_month" -": "10db3ce9f5b318da",
    "CLIENT_VIEWER "last_month" previous_year": "a004c09efa99fe90",
    "CLIENT_VIEWER ["last_30_days","x"] -": "75ee607dadf29451",
    "CLIENT_VIEWER ["last_30_days","x"] previous_year": "a85561020cd29324",
    "CLIENT_VIEWER health": "a0e4f2523621d118",
    "CLIENT_VIEWER undefined -": "a0e4f2523621d118",
    "CLIENT_VIEWER undefined previous_year": "60da3f39f56ac58d",
    "INTERNAL_ADMIN "custom:2026-08-01,2026-08-15" -": "53694c7497aefa02",
    "INTERNAL_ADMIN "custom:2026-08-01,2026-08-15" previous_year": "5b63e2778d937628",
    "INTERNAL_ADMIN "custom:2026-08-01,2026-08-31" -": "3b8c49c5eb21243e",
    "INTERNAL_ADMIN "custom:2026-08-01,2026-08-31" previous_year": "128b5602b285f9ab",
    "INTERNAL_ADMIN "junk" -": "2cab47f142c8bd44",
    "INTERNAL_ADMIN "junk" previous_year": "228cd2ad0a065653",
    "INTERNAL_ADMIN "last_30_days" -": "a0e4f2523621d118",
    "INTERNAL_ADMIN "last_30_days" previous_year": "60da3f39f56ac58d",
    "INTERNAL_ADMIN "last_month" -": "10db3ce9f5b318da",
    "INTERNAL_ADMIN "last_month" previous_year": "a004c09efa99fe90",
    "INTERNAL_ADMIN ["last_30_days","x"] -": "75ee607dadf29451",
    "INTERNAL_ADMIN ["last_30_days","x"] previous_year": "a85561020cd29324",
    "INTERNAL_ADMIN health": "4f567a492bb1b024",
    "INTERNAL_ADMIN undefined -": "a0e4f2523621d118",
    "INTERNAL_ADMIN undefined previous_year": "60da3f39f56ac58d",
  },
  "representative": {
    "tree": {
      "key": null,
      "props": {
        "children": [
          {
            "key": null,
            "props": {
              "children": [
                {
                  "key": null,
                  "props": {
                    "children": [
                      {
                        "key": null,
                        "props": {
                          "children": "Client",
                          "className": "text-sm font-bold uppercase tracking-widest text-text-muted",
                        },
                        "type": "p",
                      },
                      {
                        "key": null,
                        "props": {
                          "children": "Organic Social",
                          "className": "text-3xl font-extrabold uppercase text-white",
                        },
                        "type": "h1",
                      },
                    ],
                  },
                  "type": "div",
                },
                {
                  "key": null,
                  "props": {
                    "children": {
                      "key": null,
                      "props": {
                        "value": "last_30_days",
                      },
                      "type": "PortalReportDateRange",
                    },
                    "fallback": null,
                  },
                  "type": "react.suspense",
                },
              ],
              "className": "mb-6 flex items-end justify-between",
            },
            "type": "div",
          },
          {
            "key": null,
            "props": {
              "className": "divider-full mb-8",
            },
            "type": "div",
          },
          {
            "key": null,
            "props": {
              "children": {
                "key": null,
                "props": {
                  "children": {
                    "key": null,
                    "props": {
                      "channel": null,
                      "clientSlug": "c",
                      "compareRange": null,
                      "dateRange": "last_30_days",
                    },
                    "type": "OrganicSocialReport",
                  },
                  "fallback": {
                    "key": null,
                    "props": {},
                    "type": "ReportSkeleton",
                  },
                },
                "type": "react.suspense",
              },
              "sectionName": "Organic Social",
            },
            "type": "ReportErrorBoundary",
          },
        ],
        "className": "mx-auto max-w-6xl px-8 py-12",
      },
      "type": "div",
    },
  },
}
`;

exports[`portal deep link, renaissance-shaped: returned tree is unchanged 1`] = `
{
  "digests": {
    "CLIENT_VIEWER "custom:2026-08-01,2026-08-15" -": "53694c7497aefa02",
    "CLIENT_VIEWER "custom:2026-08-01,2026-08-15" previous_year": "5b63e2778d937628",
    "CLIENT_VIEWER "custom:2026-08-01,2026-08-31" -": "3b8c49c5eb21243e",
    "CLIENT_VIEWER "custom:2026-08-01,2026-08-31" previous_year": "128b5602b285f9ab",
    "CLIENT_VIEWER "junk" -": "2cab47f142c8bd44",
    "CLIENT_VIEWER "junk" previous_year": "228cd2ad0a065653",
    "CLIENT_VIEWER "last_30_days" -": "a0e4f2523621d118",
    "CLIENT_VIEWER "last_30_days" previous_year": "60da3f39f56ac58d",
    "CLIENT_VIEWER "last_month" -": "10db3ce9f5b318da",
    "CLIENT_VIEWER "last_month" previous_year": "a004c09efa99fe90",
    "CLIENT_VIEWER ["last_30_days","x"] -": "75ee607dadf29451",
    "CLIENT_VIEWER ["last_30_days","x"] previous_year": "a85561020cd29324",
    "CLIENT_VIEWER health": "a0e4f2523621d118",
    "CLIENT_VIEWER undefined -": "a0e4f2523621d118",
    "CLIENT_VIEWER undefined previous_year": "60da3f39f56ac58d",
    "INTERNAL_ADMIN "custom:2026-08-01,2026-08-15" -": "53694c7497aefa02",
    "INTERNAL_ADMIN "custom:2026-08-01,2026-08-15" previous_year": "5b63e2778d937628",
    "INTERNAL_ADMIN "custom:2026-08-01,2026-08-31" -": "3b8c49c5eb21243e",
    "INTERNAL_ADMIN "custom:2026-08-01,2026-08-31" previous_year": "128b5602b285f9ab",
    "INTERNAL_ADMIN "junk" -": "2cab47f142c8bd44",
    "INTERNAL_ADMIN "junk" previous_year": "228cd2ad0a065653",
    "INTERNAL_ADMIN "last_30_days" -": "a0e4f2523621d118",
    "INTERNAL_ADMIN "last_30_days" previous_year": "60da3f39f56ac58d",
    "INTERNAL_ADMIN "last_month" -": "10db3ce9f5b318da",
    "INTERNAL_ADMIN "last_month" previous_year": "a004c09efa99fe90",
    "INTERNAL_ADMIN ["last_30_days","x"] -": "75ee607dadf29451",
    "INTERNAL_ADMIN ["last_30_days","x"] previous_year": "a85561020cd29324",
    "INTERNAL_ADMIN health": "4f567a492bb1b024",
    "INTERNAL_ADMIN undefined -": "a0e4f2523621d118",
    "INTERNAL_ADMIN undefined previous_year": "60da3f39f56ac58d",
  },
  "representative": {
    "tree": {
      "key": null,
      "props": {
        "children": [
          {
            "key": null,
            "props": {
              "children": [
                {
                  "key": null,
                  "props": {
                    "children": [
                      {
                        "key": null,
                        "props": {
                          "children": "Client",
                          "className": "text-sm font-bold uppercase tracking-widest text-text-muted",
                        },
                        "type": "p",
                      },
                      {
                        "key": null,
                        "props": {
                          "children": "Organic Social",
                          "className": "text-3xl font-extrabold uppercase text-white",
                        },
                        "type": "h1",
                      },
                    ],
                  },
                  "type": "div",
                },
                {
                  "key": null,
                  "props": {
                    "children": {
                      "key": null,
                      "props": {
                        "value": "last_30_days",
                      },
                      "type": "PortalReportDateRange",
                    },
                    "fallback": null,
                  },
                  "type": "react.suspense",
                },
              ],
              "className": "mb-6 flex items-end justify-between",
            },
            "type": "div",
          },
          {
            "key": null,
            "props": {
              "className": "divider-full mb-8",
            },
            "type": "div",
          },
          {
            "key": null,
            "props": {
              "children": {
                "key": null,
                "props": {
                  "children": {
                    "key": null,
                    "props": {
                      "channel": null,
                      "clientSlug": "c",
                      "compareRange": null,
                      "dateRange": "last_30_days",
                    },
                    "type": "OrganicSocialReport",
                  },
                  "fallback": {
                    "key": null,
                    "props": {},
                    "type": "ReportSkeleton",
                  },
                },
                "type": "react.suspense",
              },
              "sectionName": "Organic Social",
            },
            "type": "ReportErrorBoundary",
          },
        ],
        "className": "mx-auto max-w-6xl px-8 py-12",
      },
      "type": "div",
    },
  },
}
`;

exports[`portal spa, new-client-shaped, no reportingMonths: returned tree is unchanged 1`] = `
{
  "digests": {
    "CLIENT_VIEWER "custom:2026-08-01,2026-08-15" -": "7081f5be8dbd54ec",
    "CLIENT_VIEWER "custom:2026-08-01,2026-08-15" previous_year": "711acdaa304a8463",
    "CLIENT_VIEWER "custom:2026-08-01,2026-08-31" -": "521b03eaad66cc52",
    "CLIENT_VIEWER "custom:2026-08-01,2026-08-31" previous_year": "f4e0e6c991f41140",
    "CLIENT_VIEWER "junk" -": "4577c6eafa32a1de",
    "CLIENT_VIEWER "junk" previous_year": "4411bd0db5e7e29d",
    "CLIENT_VIEWER "last_30_days" -": "943759abbedeecc7",
    "CLIENT_VIEWER "last_30_days" previous_year": "882cf965516f9735",
    "CLIENT_VIEWER "last_month" -": "f692ce93693802c8",
    "CLIENT_VIEWER "last_month" previous_year": "8a866469e73a8cbb",
    "CLIENT_VIEWER ["last_30_days","x"] -": "6ec51730d15463fd",
    "CLIENT_VIEWER ["last_30_days","x"] previous_year": "11a32970daff995b",
    "CLIENT_VIEWER undefined -": "943759abbedeecc7",
    "CLIENT_VIEWER undefined previous_year": "882cf965516f9735",
    "INTERNAL_ADMIN "custom:2026-08-01,2026-08-15" -": "7081f5be8dbd54ec",
    "INTERNAL_ADMIN "custom:2026-08-01,2026-08-15" previous_year": "711acdaa304a8463",
    "INTERNAL_ADMIN "custom:2026-08-01,2026-08-31" -": "521b03eaad66cc52",
    "INTERNAL_ADMIN "custom:2026-08-01,2026-08-31" previous_year": "f4e0e6c991f41140",
    "INTERNAL_ADMIN "junk" -": "4577c6eafa32a1de",
    "INTERNAL_ADMIN "junk" previous_year": "4411bd0db5e7e29d",
    "INTERNAL_ADMIN "last_30_days" -": "943759abbedeecc7",
    "INTERNAL_ADMIN "last_30_days" previous_year": "882cf965516f9735",
    "INTERNAL_ADMIN "last_month" -": "f692ce93693802c8",
    "INTERNAL_ADMIN "last_month" previous_year": "8a866469e73a8cbb",
    "INTERNAL_ADMIN ["last_30_days","x"] -": "6ec51730d15463fd",
    "INTERNAL_ADMIN ["last_30_days","x"] previous_year": "11a32970daff995b",
    "INTERNAL_ADMIN undefined -": "943759abbedeecc7",
    "INTERNAL_ADMIN undefined previous_year": "882cf965516f9735",
  },
  "representative": {
    "tree": {
      "key": null,
      "props": {
        "children": [
          {
            "key": null,
            "props": {
              "children": [
                null,
                null,
                {
                  "key": null,
                  "props": {
                    "children": {
                      "key": null,
                      "props": {
                        "compareRange": null,
                        "dateRange": "last_30_days",
                      },
                      "type": "GA4DatePicker",
                    },
                    "fallback": null,
                  },
                  "type": "react.suspense",
                },
                null,
                null,
                {
                  "key": null,
                  "props": {
                    "clientName": "Client",
                    "pageTitle": "Organic Social",
                    "periodLabel": "Sep 5 – Oct 4, 2026",
                  },
                  "type": "ExportPdfButton",
                },
              ],
              "logoUrl": null,
              "subtitle": "Client",
              "title": "Organic Social",
            },
            "type": "StickyReportHeader",
          },
          {
            "key": null,
            "props": {
              "className": "h-8",
            },
            "type": "div",
          },
          {
            "key": null,
            "props": {
              "children": {
                "key": "organic-social::last_30_days::",
                "props": {
                  "children": {
                    "key": null,
                    "props": {
                      "channel": null,
                      "clientSlug": "c",
                      "compareRange": null,
                      "dateRange": "last_30_days",
                    },
                    "type": "OrganicSocialReport",
                  },
                  "fallback": {
                    "key": null,
                    "props": {},
                    "type": "SectionSkeleton",
                  },
                },
                "type": "react.suspense",
              },
              "sectionName": "Organic Social",
            },
            "type": "ReportErrorBoundary",
          },
          null,
        ],
        "delayDuration": 150,
        "skipDelayDuration": 50,
      },
      "type": "TooltipProvider",
    },
  },
}
`;

exports[`portal spa, renaissance-shaped: returned tree is unchanged 1`] = `
{
  "digests": {
    "CLIENT_VIEWER "custom:2026-08-01,2026-08-15" -": "7081f5be8dbd54ec",
    "CLIENT_VIEWER "custom:2026-08-01,2026-08-15" previous_year": "711acdaa304a8463",
    "CLIENT_VIEWER "custom:2026-08-01,2026-08-31" -": "521b03eaad66cc52",
    "CLIENT_VIEWER "custom:2026-08-01,2026-08-31" previous_year": "f4e0e6c991f41140",
    "CLIENT_VIEWER "junk" -": "4577c6eafa32a1de",
    "CLIENT_VIEWER "junk" previous_year": "4411bd0db5e7e29d",
    "CLIENT_VIEWER "last_30_days" -": "943759abbedeecc7",
    "CLIENT_VIEWER "last_30_days" previous_year": "882cf965516f9735",
    "CLIENT_VIEWER "last_month" -": "f692ce93693802c8",
    "CLIENT_VIEWER "last_month" previous_year": "8a866469e73a8cbb",
    "CLIENT_VIEWER ["last_30_days","x"] -": "6ec51730d15463fd",
    "CLIENT_VIEWER ["last_30_days","x"] previous_year": "11a32970daff995b",
    "CLIENT_VIEWER undefined -": "943759abbedeecc7",
    "CLIENT_VIEWER undefined previous_year": "882cf965516f9735",
    "INTERNAL_ADMIN "custom:2026-08-01,2026-08-15" -": "7081f5be8dbd54ec",
    "INTERNAL_ADMIN "custom:2026-08-01,2026-08-15" previous_year": "711acdaa304a8463",
    "INTERNAL_ADMIN "custom:2026-08-01,2026-08-31" -": "521b03eaad66cc52",
    "INTERNAL_ADMIN "custom:2026-08-01,2026-08-31" previous_year": "f4e0e6c991f41140",
    "INTERNAL_ADMIN "junk" -": "4577c6eafa32a1de",
    "INTERNAL_ADMIN "junk" previous_year": "4411bd0db5e7e29d",
    "INTERNAL_ADMIN "last_30_days" -": "943759abbedeecc7",
    "INTERNAL_ADMIN "last_30_days" previous_year": "882cf965516f9735",
    "INTERNAL_ADMIN "last_month" -": "f692ce93693802c8",
    "INTERNAL_ADMIN "last_month" previous_year": "8a866469e73a8cbb",
    "INTERNAL_ADMIN ["last_30_days","x"] -": "6ec51730d15463fd",
    "INTERNAL_ADMIN ["last_30_days","x"] previous_year": "11a32970daff995b",
    "INTERNAL_ADMIN undefined -": "943759abbedeecc7",
    "INTERNAL_ADMIN undefined previous_year": "882cf965516f9735",
  },
  "representative": {
    "tree": {
      "key": null,
      "props": {
        "children": [
          {
            "key": null,
            "props": {
              "children": [
                null,
                null,
                {
                  "key": null,
                  "props": {
                    "children": {
                      "key": null,
                      "props": {
                        "compareRange": null,
                        "dateRange": "last_30_days",
                      },
                      "type": "GA4DatePicker",
                    },
                    "fallback": null,
                  },
                  "type": "react.suspense",
                },
                null,
                null,
                {
                  "key": null,
                  "props": {
                    "clientName": "Client",
                    "pageTitle": "Organic Social",
                    "periodLabel": "Sep 5 – Oct 4, 2026",
                  },
                  "type": "ExportPdfButton",
                },
              ],
              "logoUrl": null,
              "subtitle": "Client",
              "title": "Organic Social",
            },
            "type": "StickyReportHeader",
          },
          {
            "key": null,
            "props": {
              "className": "h-8",
            },
            "type": "div",
          },
          {
            "key": null,
            "props": {
              "children": {
                "key": "organic-social::last_30_days::",
                "props": {
                  "children": {
                    "key": null,
                    "props": {
                      "channel": null,
                      "clientSlug": "c",
                      "compareRange": null,
                      "dateRange": "last_30_days",
                    },
                    "type": "OrganicSocialReport",
                  },
                  "fallback": {
                    "key": null,
                    "props": {},
                    "type": "SectionSkeleton",
                  },
                },
                "type": "react.suspense",
              },
              "sectionName": "Organic Social",
            },
            "type": "ReportErrorBoundary",
          },
          null,
        ],
        "delayDuration": 150,
        "skipDelayDuration": 50,
      },
      "type": "TooltipProvider",
    },
  },
}
`;

exports[`renaissance-shaped: another section on the SPA routes is unchanged 1`] = `
{
  "dash": "f2b1ff469c439664",
  "portal": "5ba7f6ebaf26fb39",
}
`;
